# alyp-kettik-frontend

./: .flutter-plugins-dependencies  .gitignore  main.py  openapi.json  pubspec.yaml  pyproject.toml  test_main.py
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/controllers/: auth_controller.dart  dto.dart  init.dart  payment_controller.dart  product_controller.dart  session_controller.dart
lib/models/: cart.dart  models.dart  product.dart
lib/screens/: camera_screen.dart  cart_screen.dart  discover_screen.dart  edit_profile_screen.dart  entry_qr_screen.dart  help_support_screen.dart  home.dart  key_screen.dart  login_screen.dart  main_shell.dart  onboarding_screen.dart  order_detail_screen.dart  order_history_screen.dart  payment_methods_screen.dart  product_scanner_screen.dart  profile_screen.dart  qr_scanner_screen.dart  register_screen.dart  thankyou.dart
lib/utils/: formatter.dart  product_images.dart  server.dart
lib/widgets/: my_button.dart  my_input.dart  photo.dart  widgets.dart
services/: api_client.py
views/: camera_view.py  cart_view.py  payment_view.py
